2003-12-15  Alon Gazit <along@mainsoft.com>
	* Repeater.cs: Change the implementation of CreateControlHierarchy().
	The current implementation renders extra Header and footer 
	without Repeater.DataSource assign. 
	This fixes bug #52179.

2003-12-15  Alon Gazit <along@mainsoft.com>
	* DataGrid.cs: Change the implementation of the property 
	BackImageUrl. The current implementation has no influence 
	on the rendered Html.

2003-12-15  Alon Gazit <along@mainsoft.com>
	* WebControl.cs: Change the implementation of the property 
	Enabled. Before the change the WebControl also looked at 
	parent.Enabled . fixed bug #52171.

2003-12-11  Jackson Harper <jackson@ximian.com>

	* RepeatInfo.cs: When rendering vertically figure out how many
	colmns are not going to be filled in in the last row, and adjust
	things accordingly. This fixes bug #51863.
	
2003-12-10  Alon Gazit <along@mainsoft.com>
	* TableRow.cs: Change the implementation of the properties 
	HorizontalAlign and  VerticalAlign. The current implementation      
	has no influence on the rendered Html.

2003-12-10  Alon Gazit <along@mainsoft.com>
	* TableItemStyle.cs: Add setting of The WRAP flag in the Wrap
	property's set method.
	
2003-12-09  Jackson Harper <jackson@ximian.com>

	* PagedDataSource.cs (PrivateICollectionEnumerator.MoveNext):
	Increment counter when moving to start. Fixes bug #51926.
	
2003-12-08  Jackson Harper <jackson@ximian.com>

	* HyperLinkColumn.cs: Fix navigate url rendering. Patch by
	Benjamin Jemlich. Fixes bug #51823.
	
2003-12-07  Alon Gazit <along@mainsoft.com>
	* Panel.cs: Panel doesn't render nowrap attribute while the Wrap
	property is set to false. Fixes bug #58120.
	
2003-12-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TableItemStyle.cs: merge TableItemStyle properties when Style is
	empty. Fixes bug #51689. Patch by Alon Gazit <along@mainsoft.com>.

2003-12-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>
